--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <aside class="navigation custom-scrollbar">
       <div class="brand-icon position-sticky top-0 bg-white">
         <a href="index.html">
-          <img src="assets/images/logo.png" alt="">
+          <img src="./assets/images/logo.png" alt="">
         </a>
       </div>
 
